移植服务端操作诊断到 Java 8